# rfp_response_generator

./: .dockerignore  .gcloudignore  .gitignore  .replit  CONNECT_TO_NEON.md  DATABASE_OPTIMIZATION.md  DEPENDENCY_VALIDATION.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_SIZE.md  Dockerfile  ENV_SETUP.md  FIX_SECRET_PERMISSIONS.md  GCP_DEPLOYMENT.md  GCP_ENV_VARIABLES.md  GCP_SECRETS_SETUP.md  GITHUB_PREPARATION.md  LLM_RESPONSE_ISSUES.md  LOCAL_DEPLOYMENT.md  PGVECTOR_STATUS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_TROUBLESHOOTING.md  README.md  REFINED_EKG_PROMPT.md  SETUP_PGVECTOR.md  TESTING_PROTOCOL.md  VERSION.md  add-sample.js  api.py  app.yaml  calculate_fitment_score.py  call_llm.py  call_llm_simple.py  call_llm_wrapper.py  check_anthropic.py  check_push.sh  cleanup_for_github.sh  cloudbuild.yaml  create_v1_1_snapshot.sh  direct_express_fix.js  direct_update_113.py  (+45 more)
client/: api-test.html
database_backups/: drop_unused_tables.sql  full_schema_backup_20250415_134022.sql  remove_unused_tables.sql  restore_all_tables.sh  restore_excel_requirements.sql  restore_excel_requirements_readme.txt  restore_reference_responses.sql  restore_reference_responses_readme.txt  restore_rfp_responses.sql  restore_rfp_responses_readme.txt  restore_similar_questions.sql  restore_similar_questions_readme.txt  restore_users.sql  restore_users_readme.txt  table_counts_20250415_134026.txt
github_push/: ARCHITECTURE.md  CHANGELOG.md  README.md  VERSION.md  generate_prompt.py  test_api_responses.py
mini_repo/: .gitignore  README.md  VERSION.md  package.json
server/: apiKeyUtils.ts  (+42 more)
(+100 files in other folders)
