[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "gdown>=5.2.0",
    "numpy>=2.2.4",
    "openai>=1.71.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "qdrant-client>=1.13.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
